php error fix and spacing fix

--- a/css/base-sass.css
+++ b/css/base-sass.css
@@ -431,7 +431,7 @@ ul li ul, ol li ol {
   margin: 1em 0 2em 0; */ }
 
 ul.no-bullet li {
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
   padding: 10px 0 10px 0;
   list-style-image: none;
   list-style-type: none;
@@ -4444,6 +4444,8 @@ hr {
 
 .content-area a {
   text-decoration: underline; }
+.content-area a:hover {
+  text-decoration: none; }
 .content-area ul li {
   margin-bottom: .6em; }
 
